RESOLVED FIXED59622
REGRESSION (r84341): Buttons in the Mac App store are rendered incorrectly
https://bugs.webkit.org/show_bug.cgi?id=59622
Summary REGRESSION (r84341): Buttons in the Mac App store are rendered incorrectly
mitz
Reported 2011-04-27 11:18:00 PDT
REGRESSION (r84341): Buttons in the Mac App store are rendered incorrectly
Attachments
Patch (21.27 KB, patch)
2011-04-27 11:21 PDT, mitz
andersca: review+
mitz
Comment 1 2011-04-27 11:18:51 PDT
mitz
Comment 2 2011-04-27 11:21:09 PDT
mitz
Comment 3 2011-04-27 11:30:20 PDT
WebKit Review Bot
Comment 4 2011-04-27 11:41:55 PDT
http://trac.webkit.org/changeset/85067 might have broken Chromium Win Release
Note You need to log in before you can comment on or make changes to this bug.