<rdar://problem/9335973> REGRESSION (r84341): Buttons in the Mac App store are rendered incorrectly https://bugs.webkit.org/show_bug.cgi?id=59622

Reviewed by Anders Carlsson.

Source/WebCore:

Test: fast/borders/border-image-trumps-radius.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::determineBackgroundBleedAvoidance): If there is a renderable, loaded border
image, then border radius is ignored, so no bleed avoidance is needed.
* rendering/RenderObject.cpp:
(WebCore::RenderObject::borderImageIsLoadedAndCanBeRendered): Added. Moved some logic here from...
(WebCore::RenderObject::mustRepaintBackgroundOrBorder): ...here.
* rendering/RenderObject.h:

LayoutTests:

* fast/borders/border-image-trumps-radius-expected.png: Added.
* fast/borders/border-image-trumps-radius-expected.txt: Added.
* fast/borders/border-image-trumps-radius.html: Added.



Canonical link: https://commits.webkit.org/74786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85067 268f45cc-cd09-0410-ab3c-d52691b4dbfc